# connectedhomeip

config/bee/: BUILD.gn  args.gni  chip.cmake
config/bee/toolchain/: BUILD.gn
config/realtek/bee/: bee_arm.gni
config/realtek_bee/chip-gn/: BUILD.gn  args.gni
config/realtek_bee/chip-module/: CMakeLists.txt  Kconfig  Kconfig.defaults
examples/light-switch-app/bee/: chip_main.cmake
examples/light-switch-app/bee/main/: BindingHandler.cpp  DeviceCallbacks.cpp  LightSwitch.cpp  chipinterface.cpp
examples/light-switch-app/bee/main/include/: BindingHandler.h  CHIPProjectConfig.h  LightSwitch.h
examples/light-switch-app/light-switch-common/: light-switch-app-1_to_11.zap  light-switch-app-1_to_2.zap  light-switch-app-1_to_8.zap
examples/light-switch-app/realtek/bee/: chip_main.cmake
examples/lighting-app/bee/: chip_main.cmake
examples/lighting-app/bee/main/: LEDWidget.cpp  chipinterface.cpp
examples/lighting-app/realtek_bee/: CMakeLists.txt  Kconfig  chip_main.cmake  prj.conf
examples/lighting-app/realtek_bee/main/: AppTask.cpp  CHIPDeviceManager.cpp  DeviceCallbacks.cpp  Globals.cpp  ZclCallbacks.cpp  chipinterface.cpp  main.cpp
examples/ota-requestor-app/bee/: chip_main.cmake
examples/ota-requestor-app/bee/main/: CHIPDeviceManager.cpp  DeviceCallbacks.cpp  LEDWidget.cpp  chipinterface.cpp
examples/platform/realtek_bee/ota/: OTAInitializer.cpp
examples/platform/realtek_bee/util/: LEDWidget.cpp  LEDWidget.h
scripts/tools/realtek/: factory_data.py  generate_certs.py
scripts/tools/realtek_bee/ota/: dual_bank_after_build  dual_bank_ota_pack  dual_bank_post_build  flash map.ini
src/: BUILD.gn
src/lib/shell/: BUILD.gn  MainLoopBee.cpp
src/lib/support/: ScopedBuffer.h
src/platform/: BUILD.gn  device.gni
src/platform/Bee/: BLEManagerImpl.cpp  BeeConfig.h  CHIPDevicePlatformConfig.h  ConfigurationManagerImpl.cpp  DiagnosticDataProviderImpl.h  PlatformManagerImpl.cpp  args.gni
src/platform/Bee/zephyr/: OTAImageProcessorImpl.cpp
src/platform/OpenThread/: GenericThreadStackManagerImpl_OpenThread.hpp
src/platform/realtek/BEE/: BLEManagerImpl.cpp  CHIPDevicePlatformConfig.h  DiagnosticDataProviderImpl.cpp  FactoryDataDecoder.cpp  FactoryDataDecoder.h  FactoryDataProvider.cpp  Logging.cpp
src/platform/realtek_bee/: BLEManagerImpl.h  BUILD.gn  BeeConfig.cpp  ConfigurationManagerImpl.h  DiagnosticDataProviderImpl.cpp  FactoryDataDecoder.cpp  KeyValueStoreManagerImpl.cpp  Logging.cpp  OTAImageProcessorImpl.cpp
src/platform/realtek_bee/zephyr/: BUILD.gn  CHIPDevicePlatformConfig.h  OTAImageProcessorImpl.cpp  SystemPlatformConfig.h  args.gni  bee4-mbedtls-config.h  rtl8762gn_evb.overlay  rtl8762gn_evb_bank1.overlay
(+12 files in other folders)
