# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

import("${chip_root}/src/platform/device.gni")
import("${chip_root}/src/platform/realtek_bee/zephyr/args.gni")

assert(chip_device_platform == "realtek_bee")

static_library("realtek_bee") {
  sources = [
    "../../SingletonConfigurationManager.cpp",
    "../../Zephyr/BLEAdvertisingArbiter.cpp",
    "../../Zephyr/BLEAdvertisingArbiter.h",
    "../../Zephyr/ConfigurationManagerImpl.cpp",
    "../../Zephyr/DiagnosticDataProviderImpl.cpp",
    "../../Zephyr/DiagnosticDataProviderImpl.h",
    "../../Zephyr/DiagnosticDataProviderImplGetter.cpp",
    "../../Zephyr/KeyValueStoreManagerImpl.cpp",
    "../../Zephyr/Logging.cpp",
    "../../Zephyr/PlatformManagerImpl.cpp",
    "../../Zephyr/SystemTimeSupport.cpp",
    "../../Zephyr/ZephyrConfig.cpp",
    "../../Zephyr/ZephyrConfig.h",
    "BLEManagerImpl.h",
    "BlePlatformConfig.h",
    "CHIPDevicePlatformConfig.h",
    "CHIPDevicePlatformEvent.h",
    "CHIPPlatformConfig.h",

    "ConfigurationManagerImpl.h",
    "ConnectivityManagerImpl.cpp",
    "ConnectivityManagerImpl.h",
    "DiagnosticDataProviderImpl.h",
    "FactoryDataDecoder.cpp",
    "FactoryDataDecoder.h",
    "FactoryDataProvider.cpp",
    "FactoryDataProvider.h",
    "KeyValueStoreManagerImpl.h",

    "InetPlatformConfig.h",

    "OTAImageProcessorImpl.cpp",
    "PlatformManagerImpl.h",

    "SystemPlatformConfig.h",
  ]

 deps = [
    "${chip_root}/src/lib/dnssd:platform_header",
    "${chip_root}/src/platform/logging:headers",
    "${chip_root}/src/setup_payload",
  ]

  public = [ "${chip_root}/src/credentials/DeviceAttestationCredsProvider.h" ]

  public_deps = [ "${chip_root}/src/platform:platform_base" ]

  public_configs = []

  if (chip_enable_openthread) {

    public_configs += [
      "${chip_root}/src/lib/address_resolve:default_address_resolve_config",
    ]

    sources += [
      "../../OpenThread/OpenThreadUtils.cpp",
      "ThreadStackManagerImpl.cpp",
      "ThreadStackManagerImpl.h",
    ]
  }
}
